[tool.poetry]
name = "caller"
version = "0.1.0"
description = ""
authors = ["heiskane <henipe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^1.10.8"
httpx = "^0.24.1"
sqlalchemy = "^2.0.15"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"
mypy = "^1.3.0"
pylint = "^2.17.4"
ruff = "^0.0.270"

[tool.poetry.scripts]
caller_cli = "caller.cli:run_app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
